Fixed overflow of hero image

--- a/src/App.css
+++ b/src/App.css
@@ -5,7 +5,10 @@
 	font-family: "Poppins";
 	margin: 0;
 }
-
+.body {
+	width: 100vw;
+	overflow: hidden;
+}
 .navbar,
 .hero,
 .statistics,
@@ -90,7 +93,8 @@
 }
 
 .hero-right {
-	transform: translateX(12.5vw);
+	margin-left: 12.5vw;
+	overflow: hidden;
 }
 .hero-title {
 	font-size: 5vw;
